##===================================================================================================
##                              Copyright 2016 NumScale SAS
##
##                   Distributed under the Boost Software License, Version 1.0.
##                        See accompanying file LICENSE.txt or copy at
##                            http://www.boost.org/LICENSE_1_0.txt
##===================================================================================================

add_subdirectory(arithmetic)
add_subdirectory(bitwise)
add_subdirectory(boolean)
add_subdirectory(exponential)
add_subdirectory(eulerian)
add_subdirectory(hyperbolic)
add_subdirectory(ieee)
add_subdirectory(predicates)
add_subdirectory(range)
add_subdirectory(reduction)
add_subdirectory(trigonometric)
add_subdirectory(swar)
