## -------------------------------------------------------------------------------------------------
##                              Copyright 2016 - NumScale SAS
##
##                   Distributed under the Boost Software License, Version 1.0.
##                        See accompanying file LICENSE.txt or copy at
##                            http://www.boost.org/LICENSE_1_0.txt
## -------------------------------------------------------------------------------------------------

add_subdirectory(abs)
add_subdirectory(acos)
add_subdirectory(acosd)
add_subdirectory(acosh)
add_subdirectory(acospi)
add_subdirectory(acot)
add_subdirectory(acotd)
add_subdirectory(acoth)
add_subdirectory(acotpi)
add_subdirectory(acsc)
add_subdirectory(acscd)
add_subdirectory(acsch)
add_subdirectory(acscpi)
add_subdirectory(all)
add_subdirectory(any)
add_subdirectory(arg)
add_subdirectory(asec)
add_subdirectory(asecd)
add_subdirectory(asech)
add_subdirectory(asecpi)
add_subdirectory(asin)
add_subdirectory(asind)
add_subdirectory(asinh)
add_subdirectory(asinpi)
add_subdirectory(atan)
add_subdirectory(atan2)
add_subdirectory(atan2d)
add_subdirectory(atan2pi)
add_subdirectory(atand)
add_subdirectory(atanh)
add_subdirectory(atanpi)
add_subdirectory(average)
add_subdirectory(bitfloating)
####add_subdirectory(bitget)
add_subdirectory(bitinteger)
####add_subdirectory(bitset)
add_subdirectory(bitwise_and)
add_subdirectory(bitwise_andnot)
####add_subdirectory(bitwise_cast)
add_subdirectory(bitwise_not)
add_subdirectory(bitwise_notand)
add_subdirectory(bitwise_notor)
add_subdirectory(bitwise_or)
add_subdirectory(bitwise_ornot)
add_subdirectory(bitwise_select)
add_subdirectory(bitwise_xor)
####add_subdirectory(broadcast)
add_subdirectory(cbrt)
add_subdirectory(ceil)
add_subdirectory(clz)
add_subdirectory(compare_equal)
add_subdirectory(compare_greater)
add_subdirectory(compare_greater_equal)
add_subdirectory(compare_less)
add_subdirectory(compare_less_equal)
add_subdirectory(compare_not_equal)
add_subdirectory(complement)
add_subdirectory(conj)
add_subdirectory(copysign)
add_subdirectory(correct_fma)
add_subdirectory(cos)
add_subdirectory(cosd)
add_subdirectory(cosh)
add_subdirectory(cospi)
add_subdirectory(cot)
add_subdirectory(cotd)
add_subdirectory(coth)
add_subdirectory(cotpi)
add_subdirectory(csc)
add_subdirectory(cscd)
add_subdirectory(csch)
add_subdirectory(cscpi)
add_subdirectory(ctz)
add_subdirectory(dec)
add_subdirectory(dist)
add_subdirectory(divides)
add_subdirectory(dot)
####add_subdirectory(enumerate)
add_subdirectory(erf)
add_subdirectory(erfc)
add_subdirectory(exp)
add_subdirectory(exp10)
add_subdirectory(exp2)
add_subdirectory(expm1)
add_subdirectory(exprecneg)
add_subdirectory(exprecnegc)
add_subdirectory(expx2)
add_subdirectory(ffs)
add_subdirectory(firstbitset)
add_subdirectory(firstbitunset)
add_subdirectory(floor)
add_subdirectory(fma)
add_subdirectory(fms)
add_subdirectory(fnma)
add_subdirectory(fnms)
add_subdirectory(fpclassify)
add_subdirectory(frac)
add_subdirectory(frexp)
add_subdirectory(gamma)
add_subdirectory(gammaln)
####add_subdirectory(genmask)
####add_subdirectory(genmaskc)
add_subdirectory(hi)
add_subdirectory(hmsb)
add_subdirectory(hypot)
add_subdirectory(iceil)
add_subdirectory(if_allbits_else)
add_subdirectory(if_dec)
add_subdirectory(if_else)
add_subdirectory(if_else_allbits)
add_subdirectory(if_else_zero)
add_subdirectory(if_inc)
add_subdirectory(if_one_else_zero)
add_subdirectory(if_zero_else)
add_subdirectory(if_zero_else_one)
add_subdirectory(ifloor)
add_subdirectory(ifnot_dec)
add_subdirectory(ifnot_inc)
add_subdirectory(ifnot_minus)
add_subdirectory(ifnot_plus)
add_subdirectory(ilog2)
add_subdirectory(ilogb)
add_subdirectory(inc)
add_subdirectory(indeg)
add_subdirectory(inearbyint)
add_subdirectory(inrad)
add_subdirectory(iround)
add_subdirectory(is_denormal)
add_subdirectory(is_equal)
add_subdirectory(is_equal_with_equal_nans)
add_subdirectory(is_eqz)
add_subdirectory(is_even)
add_subdirectory(is_finite)
add_subdirectory(is_flint)
add_subdirectory(is_gez)
add_subdirectory(is_greater)
add_subdirectory(is_greater_equal)
add_subdirectory(is_gtz)
add_subdirectory(is_imag)
add_subdirectory(is_inf)
add_subdirectory(is_invalid)
add_subdirectory(is_less)
add_subdirectory(is_less_equal)
add_subdirectory(is_lessgreater)
add_subdirectory(is_lez)
add_subdirectory(is_ltz)
add_subdirectory(is_nan)
add_subdirectory(is_negative)
add_subdirectory(is_nez)
add_subdirectory(is_ngez)
add_subdirectory(is_ngtz)
add_subdirectory(is_nlez)
add_subdirectory(is_nltz)
add_subdirectory(is_normal)
add_subdirectory(is_not_denormal)
add_subdirectory(is_not_equal)
add_subdirectory(is_not_equal_with_equal_nans)
add_subdirectory(is_not_greater)
add_subdirectory(is_not_greater_equal)
add_subdirectory(is_not_infinite)
add_subdirectory(is_not_less)
add_subdirectory(is_not_less_equal)
add_subdirectory(is_not_nan)
add_subdirectory(is_not_real)
add_subdirectory(is_odd)
add_subdirectory(is_ord)
add_subdirectory(is_positive)
add_subdirectory(is_real)
add_subdirectory(is_unord)
add_subdirectory(isincluded)
add_subdirectory(isincluded_c)
add_subdirectory(ldexp)
add_subdirectory(lo)
add_subdirectory(log)
add_subdirectory(log10)
add_subdirectory(log1p)
add_subdirectory(log2)
add_subdirectory(logical_and)
add_subdirectory(logical_andnot)
add_subdirectory(logical_not)
add_subdirectory(logical_notand)
add_subdirectory(logical_notor)
add_subdirectory(logical_or)
add_subdirectory(logical_ornot)
add_subdirectory(logical_xor)
add_subdirectory(lookup)
add_subdirectory(majority)
add_subdirectory(mantissa)
add_subdirectory(max)
add_subdirectory(maxmag)
add_subdirectory(maxnum)
add_subdirectory(maxnummag)
add_subdirectory(meanof)
add_subdirectory(min)
add_subdirectory(minmag)
add_subdirectory(minmod)
add_subdirectory(minnum)
add_subdirectory(minnummag)
add_subdirectory(minus)
add_subdirectory(modf)
add_subdirectory(multiplies)
#######add_subdirectory(nbtrue)
add_subdirectory(nearbyint)
add_subdirectory(negate)
add_subdirectory(negatenz)
add_subdirectory(negif)
add_subdirectory(negifnot)
add_subdirectory(next)
add_subdirectory(nextafter)
add_subdirectory(none)
add_subdirectory(nthroot)
add_subdirectory(oneminus)
add_subdirectory(plus)
add_subdirectory(pow)
add_subdirectory(pow2)
add_subdirectory(pow_abs)
add_subdirectory(predecessor)
add_subdirectory(prev)
add_subdirectory(rec)
add_subdirectory(rem)
add_subdirectory(rem_pio2)
add_subdirectory(rem_pio2_cephes)
add_subdirectory(rem_pio2_medium)
add_subdirectory(rem_pio2_straight)
add_subdirectory(remquo)
add_subdirectory(reverse)
add_subdirectory(reversebits)
add_subdirectory(rol)
add_subdirectory(ror)
add_subdirectory(round)
add_subdirectory(rrol)
add_subdirectory(rror)
add_subdirectory(rsqrt)
add_subdirectory(safe_max)
add_subdirectory(safe_min)
add_subdirectory(sec)
add_subdirectory(secd)
add_subdirectory(sech)
add_subdirectory(secpi)
add_subdirectory(shift_left)
add_subdirectory(shift_right)
add_subdirectory(shr)
add_subdirectory(sign)
add_subdirectory(significants)
add_subdirectory(signnz)
add_subdirectory(sin)
add_subdirectory(sinc)
add_subdirectory(sincos)
add_subdirectory(sincosd)
add_subdirectory(sincospi)
add_subdirectory(sincpi)
add_subdirectory(sind)
add_subdirectory(sinh)
add_subdirectory(sinhc)
add_subdirectory(sinhcosh)
add_subdirectory(sinpi)
add_subdirectory(split_multiplies)
add_subdirectory(sqr)
add_subdirectory(sqr_abs)
add_subdirectory(sqrt)
add_subdirectory(sqrt1pm1)
add_subdirectory(successor)
add_subdirectory(tan)
add_subdirectory(tand)
add_subdirectory(tanh)
add_subdirectory(tanpi)
add_subdirectory(tenpower)
add_subdirectory(tofloat)
add_subdirectory(toint)
add_subdirectory(touint)
add_subdirectory(trunc)
add_subdirectory(two_add)
add_subdirectory(two_prod)
add_subdirectory(two_split)
add_subdirectory(twopower)
add_subdirectory(ulpdist)
add_subdirectory(unary_minus)
add_subdirectory(unary_plus)
