## -------------------------------------------------------------------------------------------------
##                              Copyright 2016 - NumScale SAS
##
##                   Distributed under the Boost Software License, Version 1.0.
##                        See accompanying file LICENSE.txt or copy at
##                            http://www.boost.org/LICENSE_1_0.txt
## -------------------------------------------------------------------------------------------------

 add_subdirectory(abs)
 add_subdirectory(acos)
 add_subdirectory(acosh)
 add_subdirectory(asin)
 add_subdirectory(asind)
 add_subdirectory(asinh)
 add_subdirectory(atan)
 add_subdirectory(atan2)
 add_subdirectory(atanh)
 add_subdirectory(cbrt)
 add_subdirectory(ceil)
 add_subdirectory(copysign)
 add_subdirectory(cos)
 add_subdirectory(cosh)
 add_subdirectory(erf)
 add_subdirectory(erfc)
 add_subdirectory(exp)
 add_subdirectory(exp10)
 add_subdirectory(exp2)
 add_subdirectory(expm1)
 add_subdirectory(floor)
 add_subdirectory(fma)
 add_subdirectory(frexp)
 add_subdirectory(gamma)
 add_subdirectory(gammaln)
 add_subdirectory(hypot)
 add_subdirectory(is_finite)
 add_subdirectory(is_inf)
 add_subdirectory(is_lessgreater)
 add_subdirectory(is_nan)
 add_subdirectory(is_negative)
 add_subdirectory(is_normal)
 add_subdirectory(is_unord)
## add_subdirectory(ldexp)
 add_subdirectory(log10)
 add_subdirectory(log1p)
 add_subdirectory(log2)
 add_subdirectory(max)
 add_subdirectory(maxnum)
 add_subdirectory(min)
 add_subdirectory(minnum)
 add_subdirectory(nearbyint)
 add_subdirectory(nextafter)
 add_subdirectory(pow)
## add_subdirectory(remquo)
 add_subdirectory(round)
 add_subdirectory(sin)
 add_subdirectory(sinh)
 add_subdirectory(sqrt)
 add_subdirectory(tan)
 add_subdirectory(trunc)

