##===================================================================================================
##                              Copyright 2016 NumScale SAS
##
##                   Distributed under the Boost Software License, Version 1.0.
##                        See accompanying file LICENSE.txt or copy at
##                            http://www.boost.org/LICENSE_1_0.txt
##===================================================================================================
## Larger test suites go there
add_subdirectory(div)
add_subdirectory(rem)

set ( SOURCES
   abs.regular.cpp
   abs.saturated.cpp
   abs.std.cpp
   acos.regular.cpp
   acos.pedantic.cpp
   acosd.regular.cpp
   acosd.pedantic.cpp
   acosh.cpp
   acospi.regular.cpp
   acospi.pedantic.cpp
   acot.cpp
   acotd.cpp
   acotpi.cpp
   acoth.cpp
   acsc.cpp
   acscd.cpp
   acsch.cpp
   acscpi.cpp
   aligned_store.cpp
   all.cpp
   any.cpp
   arg.cpp
   asec.cpp
   asecd.cpp
   asech.cpp
   asecpi.cpp
   asin.cpp
   asind.cpp
   asinh.cpp
   asinpi.cpp
   atan2.regular.cpp
   atan2.pedantic.cpp
   atan2.std.cpp
   atan2d.regular.cpp
   atan2d.pedantic.cpp
   atan2pi.pedantic.cpp
   atan2pi.regular.cpp
   atan.cpp
   atand.cpp
   atanh.cpp
   atanpi.cpp
   average.cpp
   basic.cpp
   bitfloating.cpp
   bitinteger.cpp
   bitofsign.cpp
   bits.cpp
   bitwise_and.cpp
   bitwise_andnot.cpp
   bitwise_cast.cpp
   bitwise_notand.cpp
   bitwise_notor.cpp
   bitwise_or.cpp
   bitwise_ornot.cpp
   bitwise_not.cpp
   bitwise_select.cpp
   bitwise_xor.cpp
   broadcast.cpp
   cast.cpp
   cbrt.cpp
   ceil.regular.cpp
   ceil.std.cpp
   clamp.cpp
   clz.cpp
   compare_equal.cpp
   compare_greater.cpp
   compare_greater_equal.cpp
   compare_less.cpp
   compare_less_equal.cpp
   compare_not_equal.cpp
   complement.cpp
   conj.cpp
   copysign.cpp
   cos.cpp
   cosd.cpp
   cosh.cpp
   cospi.cpp
   cot.cpp
   cotd.cpp
   coth.cpp
   cotpi.cpp
   csc.cpp
   cscd.cpp
   csch.cpp
   cscpi.cpp
   ctz.cpp
   cummax.cpp
   cummin.cpp
   cumprod.cpp
   cumsum.cpp
   dec.regular.cpp
   dec.saturated.cpp
   dist.regular.cpp
   dist.saturated.cpp
   divides.regular.cpp
   divides.saturated.cpp
   dot.cpp
   enumerate.cpp
   eps.cpp
   erfc.regular.cpp
   erfc.std.cpp
   erf.cpp
   erfcx.cpp
   exp10.cpp
   exp2.regular.cpp
   exp2.std.cpp
   exp.regular.cpp
   expm1.regular.cpp
   expm1.std.cpp
   exponent.cpp
   exponentbits.cpp
   exprecnegc.cpp
   exprecneg.cpp
   expx2.cpp
   extract.cpp
   ffs.cpp
   firstbitset.cpp
   firstbitunset.cpp
   floor.regular.cpp
   floor.std.cpp
   fma.regular.cpp
   fma.pedantic.cpp
   fms.cpp
   fnma.cpp
   fnms.cpp
   fpclassify.regular.cpp
   fpclassify.std.cpp
   frac.cpp
   frexp.raw.cpp
   frexp.regular.cpp
   frexp.pedantic.cpp
   gamma.cpp
   gammaln.cpp
   genmaskc.cpp
   genmask.cpp
   hi.cpp
   hmsb.cpp
   horn1.cpp
   horn.cpp
   hypot.regular.cpp
   hypot.pedantic.cpp
   hypot.std.cpp
   iceil.cpp
   if_allbits_else.cpp
   if_allbits_else_zero.cpp
   if_dec.cpp
   if_else_allbits.cpp
   if_else_nan.cpp
   if_else.cpp
   if_else_zero.cpp
   if_inc.cpp
   ifix.cpp
   ifloor.cpp
   if_minus.cpp
   ifnot_dec.cpp
   ifnot_inc.cpp
   ifnot_minus.cpp
   ifnot_plus.cpp
   if_nan_else.cpp
   if_one_else_zero.cpp
   if_plus.cpp
   if_zero_else.cpp
   if_zero_else_allbits.cpp
   if_zero_else_one.cpp
   ifrexp.raw.cpp
   ifrexp.regular.cpp
   ifrexp.pedantic.cpp
   ilog2.cpp
   ilogb.cpp
   inc.regular.cpp
   inc.saturated.cpp
   indeg.cpp
   inearbyint.regular.cpp
   inearbyint.pedantic.cpp
   inrad.cpp
   insert.cpp
   iround.cpp
   is_denormal.cpp
   is_equal.cpp
   is_equal_with_equal_nans.cpp
   is_eqz.cpp
   is_even.cpp
   is_finite.cpp
   is_flint.cpp
   is_gez.cpp
   is_greater.cpp
   is_greater_equal.cpp
   is_gtz.cpp
   is_imag.cpp
   isincluded_c.cpp
   isincluded.cpp
   is_inf.cpp
   is_invalid.cpp
   is_less.cpp
   is_less_equal.cpp
   is_lessgreater.cpp
   is_lez.cpp
   is_ltz.cpp
   is_nan.cpp
   is_negative.cpp
   is_nez.cpp
   is_ngez.cpp
   is_ngtz.cpp
   is_nlez.cpp
   is_nltz.cpp
   is_normal.regular.cpp
   is_normal.std.cpp
   is_not_denormal.cpp
   is_not_equal.cpp
   is_not_equal_with_equal_nans.cpp
   is_not_greater.cpp
   is_not_greater_equal.cpp
   is_not_imag.cpp
   is_not_infinite.cpp
   is_not_less.cpp
   is_not_less_equal.cpp
   is_not_nan.cpp
   is_not_real.cpp
   is_odd.cpp
   is_ord.cpp
   is_positive.cpp
   is_real.cpp
   is_simd_logical.cpp
   is_unord.cpp
   ldexp.regular.cpp
   ldexp.pedantic.cpp
   ldexp.std.cpp
   load.cpp
   lo.cpp
   log10.regular.cpp
   log10.std.cpp
   log1p.cpp
   log2.regular.cpp
   log2.std.cpp
   log.regular.cpp
   log.std.cpp
   logical_and.cpp
   logical_andnot.cpp
   logical_notand.cpp
   logical_not.cpp
   logical_notor.cpp
   logical_or.cpp
   logical_ornot.cpp
   logical_xor.cpp
   lookup.cpp
   majority.cpp
   make.cpp
   mantissa.cpp
   mask2logical.cpp
   max.cpp
   maximum.regular.cpp
   maximum.splatted.cpp
   maxmag.cpp
   maxnum.regular.cpp
   maxnum.std.cpp
   maxnummag.cpp
   meanof.cpp
   min.cpp
   minimum.regular.cpp
   minimum.splatted.cpp
   minmag.cpp
   minmod.cpp
   minnum.cpp
   minnummag.cpp
   minus.regular.cpp
   modf.cpp
   multiplies.regular.cpp
   multiplies.saturated.cpp
   nbtrue.cpp
   nearbyint.regular.cpp
   nearbyint.std.cpp
   negate.cpp
   negatenz.cpp
   if_neg.cpp
   ifnot_neg.cpp
   nextafter.cpp
   next.cpp
   nextpow2.cpp
   none.cpp
   nthroot.cpp
   oneminus.regular.cpp
   oneminus.saturated.cpp
   plus.regular.cpp
   plus.saturated.cpp
   popcnt.cpp
   pow2.cpp
   pow_abs.cpp
   pow.regular.cpp
   pow.std.cpp
   predecessor.cpp
   prev.cpp
   prod.cpp
   rec.cpp
   rem_2pi.cpp
   rem_pio2_cephes.cpp
   rem_pio2.cpp
   rem_pio2_medium.cpp
   rem_pio2_straight.cpp
   remquo.cpp
   reversebits.cpp
   reverse.cpp
   rol.cpp
   ror.cpp
   round.regular.cpp
   round.std.cpp
   rrol.cpp
   rror.cpp
   rshl.cpp
   rshr.cpp
   rsqrt.pedantic.cpp
   rsqrt.raw.cpp
   rsqrt.regular.cpp
   safe_max.cpp
   safe_min.cpp
   saturate.cpp
   sbits.cpp
   sec.cpp
   secd.cpp
   sech.cpp
   secpi.cpp
   shift_left.cpp
   shift_right.cpp
   shr.cpp
   shuffle.cpp
   signbit.cpp
   sign.cpp
   signgam.cpp
   significants.cpp
   signnz.cpp
   sinc.cpp
   sincos.cpp
   sincosd.cpp
   sincospi.cpp
   sincpi.cpp
   sin.cpp
   sind.cpp
   sinhc.cpp
   sinhcosh.cpp
   sinh.cpp
   sinpi.cpp
   slide.cpp
   sort.cpp
   splat.cpp
   sqr_abs.cpp
   sqr.regular.cpp
   sqr.saturated.cpp
   sqrt1pm1.cpp
   sqrt.regular.cpp
   sqrt.std.cpp
   sqrt.raw.cpp
   stirling.cpp
   store.cpp
   successor.cpp
   swapbytes.cpp
   sum.cpp
   tan.cpp
   tand.cpp
   tanh.cpp
   tanpi.cpp
   tenpower.cpp
   tofloat.cpp
   toint.regular.cpp
   toint.saturated.cpp
   touint.regular.cpp
   touint.saturated.cpp
   trunc.raw.cpp
   trunc.regular.cpp
   trunc.std.cpp
   two_add.cpp
   quadrant.cpp
   twopower.cpp
   two_prod.cpp
   two_split.cpp
   ulp.cpp
   ulpdist.cpp
   unary_minus.regular.cpp
   unary_minus.saturated.cpp
   unary_plus.cpp
)

make_unit( "function.scalar"   ${SOURCES})
make_coverage("function.scalar"  ${SOURCES})
